--- a/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
+++ b/aanvallers_en_verdedigers/zijpaginaComputervredebreuk.html
@@ -22,9 +22,9 @@
         </header>
 
         <div id="bigimage">
-            <img src="../afbeeldingen/computervredebreuk1.jfif" alt=" afbeelding_computervredebreuk"> </article>
+            <img src="../afbeeldingen/computervredebreuk1.jfif" alt=" afbeelding_computervredebreuk"> </div>
 
-            <article class="kop_samenvattingComputervredebreuk1">
+            <div class="kop_samenvattingComputervredebreuk1">
                 <p>Er zijn verschillende soorten computercriminaliteit, zoals diefstal, fraude, afpersing en hacken, wat
                     ook bekend staat als computervredebreuk. Hacken is illegaal, zelfs als het alleen een poging is. Het
                     hebben van tools om te hacken is ook verboden. Eigenaren moeten zorgen voor goede beveiliging, maar
@@ -35,13 +35,13 @@
                     worden voorkomen. Als je toch slachtoffer wordt van computercriminaliteit, wat erg serieus is, is
                     het aangeraden om naar de politie te gaan en aangifte te doen.
                 </p>
+            </div>
+
+        <div class="koptitel">
+            <p>Diefstal, fraude en afpersing</p>
         </div>
 
-        <article class="koptitel">
-            <p>Diefstal, fraude en afpersing</p>
-        </article>
-
-        <article class="kop_samenvattingComputervredebreuk2">
+        <div class="kop_samenvattingComputervredebreuk2">
             <p>
                 <span class="bold-word">Diefstal</span> van data kan op verschillende manieren plaatsvinden, zoals het
                 hacken van een apparaat of toegang verkrijgen tot een database met persoonlijke gegevens. Soms merkt de
@@ -60,7 +60,7 @@
                 en kunnen slachtoffers bang maken om te betalen, zelfs als de crimineel de gegevens niet eigenlijk
                 bezit.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
