--- a/aanvallers_en_verdedigers/zijpaginaZerodays.html
+++ b/aanvallers_en_verdedigers/zijpaginaZerodays.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/Zerodays.jpg" alt=" afbeelding_Zerodays">
         </div>
 
-        <article class="kop_samenvattingZerodays1">
+        <div class="kop_samenvattingZerodays1">
             <p>
                 Een zeroday is een zwakke plek in een software die nog niet ontdekt is. Deze zijn enorm waardevol omdat
                 ze kunnen worden gebruikt om te hacken. Er bestaat een hele handel in zerodays, waarbij belangrijke
@@ -34,13 +34,13 @@
                 oorspronkelijke makers van de software. Helaas worden deze kwetsbaarheden vervolgens vaak doorverkocht
                 aan bedrijven en overheden, die ze inzetten voor potentieel schadelijke doeleinden.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Cyberoorlogsvoering</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingZerodays2">
+        <div class="kop_samenvattingZerodays2">
             <p>
                 Zerodays worden beschouwd als digitale wapens in de cyberoorlogsvoering. Ze kunnen worden ingezet voor
                 schadelijke aanvallen, zoals het overnemen van controle over apparaten, het stelen van gegevens of het
@@ -54,7 +54,7 @@
                 inlichtingendiensten. Stuxnet gebruikte meerdere zerodays om het Iraanse kernprogramma te saboteren door
                 hun apparaten te beïnvloeden, waardoor het Iraanse kernwapenprogramma werd vertraagd.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
