--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -27,7 +27,7 @@
             <img src="../afbeeldingen/Architectuur.jpg" alt=" afbeelding authenticatie">
         </div>
 
-        <article class="kop_samenvattingZwakhedenArchitectuur1">
+        <div class="kop_samenvattingZwakhedenArchitectuur1">
             <p>In het nieuws wordt er vaak gesproken over zwakke plekken in websites of apps. Dat betekent dat er een
                 fout ontdekt is in hoe ze gemaakt zijn en dat gebruikt wordt om problemen te veroorzaken. De zwakheden
                 in de architectuur van ICT-producten kan je meestal verdelen in drie lagen:
@@ -42,13 +42,13 @@
                 Een voorbeeld is de camera op je telefoon. Soms kan een app stiekem je camera gebruiken zonder dat je
                 daar toestemming voor hebt gegeven. Dit soort fouten kunnen gebruikt worden door mensen die proberen je
                 privacy te schenden.</p>
-        </article>
+            </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>SQL injecties en ethische hackers</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingZwakhedenArchitectuur2">
+        <div class="kop_samenvattingZwakhedenArchitectuur2">
             <p>
                 Een ander voorbeeld gaat over databases en vragen in een programmeertaal genaamd SQL. Als er een fout
                 zit in de manier waarop een app of website gegevens uit een database haalt, kunnen hackers toegang
@@ -60,7 +60,7 @@
                 door ethische hackers die express proberen binnen te komen om fouten te ontdekken voordat echte hackers
                 dat doen.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
