--- a/bedreigingen/zijpaginaZwakhedenCommunicatie.html
+++ b/bedreigingen/zijpaginaZwakhedenCommunicatie.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/Encryptie.jpg" alt=" afbeelding encryptie">
         </div>
 
-        <article class="kop_samenvattingZwakhedenCommunicatie1">
+        <div class="kop_samenvattingZwakhedenCommunicatie1">
             <p>Apparaten zijn de hele tijd aan het communiceren over het internet. Gebruikers sturen voortdurend
                 informatie naar de server, als dat onveilig gebeurt kunnen er belangrijke gegevens en wachtwoorden
                 gebruikt worden door anderen. Door een Man-in-the-middle aanval kunnen gegevens, terwijl ze via het
@@ -36,13 +36,13 @@
                 hiermee en maken gebruik van het internet, terwijl al het internetverkeer via de hotspot van de
                 aanvaller gaat.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>HTTPS en End-to-end encryption</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingZwakhedenCommunicatie2">HTTPS is een veiligere versie van het internetprotocol
+        <div class="kop_samenvattingZwakhedenCommunicatie2">HTTPS is een veiligere versie van het internetprotocol
             HTTP, dit zijn regels die de gegevensuitwisseling en de communicatie regelen. Het zorgt voor beveiligde
             communicatie tussen de gebruiker en een website via encryptie (versleuteling). Hierdoor blijven jouw
             gegevens privé tijdens verzending. Het gebruik van HTTPS maakt het moeilijker voor hackers om gegevens te
@@ -55,7 +55,7 @@
             als hackers toegang krijgen tot de server. Dit lost problemen op die ontstaan door zwakheden in communicatie
             en architectuur.
 
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
