--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/Wachtwoord.webp" alt=" afbeelding wachtwoord">
         </div>
 
-        <article class="kop_samenvattingZwakhedenGebruiker1">
+        <div class="kop_samenvattingZwakhedenGebruiker1">
             <p>
                 Er zijn niet alleen zwakheden in de systemen, maar ook bij de gebruikers, zoals met wachtwoorden. Vaak
                 kiezen mensen eenvoudige wachtwoorden die gemakkelijk te kraken zijn, wat aanvallers de kans geeft om in
@@ -39,13 +39,13 @@
                 een vergeten wachtwoord, want die zijn vaak gemakkelijk te raden voor criminelen.
 
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Wachtwoordsterkte en passwordmanagers</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingZwakhedenGebruiker2">
+        <div class="kop_samenvattingZwakhedenGebruiker2">
             Veel websites hebben specifieke eisen om de sterkte van wachtwoorden te beoordelen, zodat gegevens goed
             beveiligd zijn. Er zijn verschillende methoden om de sterkte van een wachtwoord te meten:
             <ul>
@@ -62,7 +62,7 @@
             Het beheren van verschillende wachtwoorden voor diverse websites kan lastig zijn. Een oplossing hiervoor is
             een passwordmanager. Dit is software die wachtwoorden veilig opslaat, zodat er slechts één sterk wachtwoord
             nodig is. Deze manager vult automatisch de juiste inloggegevens in wanneer er een website bezocht wordt.
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
