--- a/digitale_veiligheid/zijpaginaAuthenticatie.html
+++ b/digitale_veiligheid/zijpaginaAuthenticatie.html
@@ -28,7 +28,7 @@
             <img src="../afbeeldingen/Authenticatie1.webp" alt=" Afbeelding authenticatie">
         </div>
 
-        <article class="kop_samenvattingAuthenticatie1">
+        <div class="kop_samenvattingAuthenticatie1">
             <p>Op het internet is het cruciaal dat jouw persoonlijke gegevens veilig zijn. Voordat je toegang krijgt tot
                 belangrijke informatie, zoals je cijfers of persoonlijke gegevens, moeten we zeker weten dat jij het
                 echt bent. Dit proces wordt 'authenticatie' genoemd, dit is het controleren van je identiteit voordat je
@@ -39,13 +39,13 @@
                 voor, je probeert veel geld over te maken terwijl je in het buitenland bent. Dat kan een signaal zijn
                 voor bijvoorbeeld je bank dat iemand anders misschien toegang probeert te krijgen tot je account.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Stappen in de authenticatie</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingAuthenticatie2">Controleren wie je bent, bestaat uit verschillende stappen. Het
+        <div class="kop_samenvattingAuthenticatie2">Controleren wie je bent, bestaat uit verschillende stappen. Het
             begint bij de identificatie, hierbij moeten we weten wie je bent. Dit kan bijvoorbeeld door het invoeren van
             een gebruikersnaam en wachtwoord of door je biometrie, zoals bij vingerafdruk- of
             gezichtsherkenning-wachtwoorden. Daarna komt de verificatie, waarbij er gecontroleerd wordt of je echt bent
@@ -54,7 +54,8 @@
             verhoogt het de veiligheid van je gegevens. Dat zie je bijvoorbeeld bij bankpassen: om te betalen heb je
             eerst de pas zelf nodig (iets wat je hebt) en je hebt het wachtwoord nodig (iets wat je weet). Het
             combineren van twee vormen van authenticatie wordt two-factor authentication (2FA) genoemd en dat maakt het
-            moeilijker voor hackers om toegang te krijgen.</article>
+            moeilijker voor hackers om toegang te krijgen.
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
