--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/Beschikbaarheid.jpg" alt="afbeelding Beschikbaarheid">
         </div>
 
-        <article class="kop_samenvattingBeschikbaarheid1">
+        <div class="kop_samenvattingBeschikbaarheid1">
             <p>De beschikbaarheid van data is heel belangrijk, data moet altijd beschikbaar zijn wanneer we het nodig
                 hebben. Dit betekent dat er voorzorgsmaatregelen moeten worden genomen, zoals het regelmatig updaten van
                 onze computers en het maken van kopieën van belangrijke informatie, zodat die niet worden kwijtgeraakt.
@@ -37,13 +37,13 @@
                 om deze problemen te voorkomen en ervoor te zorgen dat onze gegevens altijd veilig en beschikbaar zijn
                 wanneer we ze nodig hebben.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Encryptie en DDoS</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingBeschikbaarheid2">
+        <div class="kop_samenvattingBeschikbaarheid2">
             <p>Het opslaan en verzenden van gevoelige informatie zoals wachtwoorden, pincodes en vingerafdrukken brengt
                 risico&apos;s met zich mee. Hackers zouden bijvoorbeeld een database met wachtwoorden kunnen bekijken! Dit
                 kan leiden tot toegang tot persoonlijke gegevens, wat een ernstig probleem is voor gebruikers. Om deze
@@ -60,7 +60,7 @@
                 of het onbereikbaar worden van een bank. Om DDoS-aanvallen tegen te gaan, worden verschillende methoden
                 gebruikt, zoals het filteren van internetverkeer of het gebruik van gespecialiseerde anti-DDoS-diensten.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
