--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -25,18 +25,18 @@
             <img src="../afbeeldingen/Detectie.jpg" alt=" Detectie">
         </div>
 
-        <article class="kop_samenvattingdetectie1">
+        <div class="kop_samenvattingdetectie1">
             <p>Ter beveiliging wordt er bijgehouden hoe vaak er wordt geprobeerd in te loggen onder een bepaalde
                 gebruikersnaam. Is dit te vaak, dan kan de gebruiker worden geblokkeerd. Het is nodig om allerlei
                 gegevens van een systeem te loggen als deze methode wordt gebruikt.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Detectiehulpmiddelen</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingdetectie2">
+        <div class="kop_samenvattingdetectie2">
             <p>
                 <span class="bold-word">Firewall</span><br>Een firewall is een systeem dat al het inkomende
                 netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een
@@ -61,7 +61,7 @@
                 De Play Store en App Store controleren apps ook op malware en het ongeoorloofd verzamelen van
                 informatie, voordat een app kan worden gedownload.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
