--- a/maatregelen/zijpaginaPreventie.html
+++ b/maatregelen/zijpaginaPreventie.html
@@ -25,7 +25,7 @@
       <img src="../afbeeldingen/Preventie.jpg" alt=" Preventie">
     </div>
 
-    <article class="kop_samenvattingPreventie1">
+    <div class="kop_samenvattingPreventie1">
       <p>
         Indringers maken weinig kans als de hard- en software zo min mogelijk kwetsbaarheden hebben. Daarom moeten
         bijvoorbeeld softwareontwikkelaars op de hoogte zijn van de manieren waarop je beveiligde software maakt. Toch
@@ -41,15 +41,15 @@
         maatregelen te nemen. Dit is Europees verplicht. Verder moet het bedrijf vertellen hoe je gegevens worden
         beschermd. Zo kunt u als gebruiker zelf nagaan of u vindt dat uw gegevens goed genoeg worden beschermd.
       </p>
-    </article>
+    </div>
 
-    <article class="koptitel">
+    <div class="koptitel">
       <p>
         Verschillende soorten beveiliging
       </p>
-    </article>
+    </div>
 
-    <article class="kop_samenvattingPreventie2">
+    <div class="kop_samenvattingPreventie2">
       <p>
         <span class="bold-word">Sandboxing</span><br>Een voorbeeld van een softwaresecuritymaatregel is sandboxing. Deze
         techniek zorgt ervoor dat een app niet zomaar toegang heeft tot andere plekken van het systeem, op het eigen
@@ -74,9 +74,9 @@
         bericht, is er een geheime sleutel nodig. Die maakt de ontvanger, zo is er geen onderschepping gevaar.
       </p>
 
-    </article>
+    </div>
 
-    <table class="custom-table" border="1">
+    <table class="custom-table">
       <tr>
         <td colspan="2" class="Tabeltitel">
           Wat kunt u zelf doen?</td>
