--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/Repressie_en_correctie.jpg" alt=" Repressie_en_correctie">
         </div>
 
-        <article class="kop_samenvattingRepressie_en_correctie1">
+        <div class="kop_samenvattingRepressie_en_correctie1">
             <p>
                 Het kan voldoende zijn om alleen de malware in een netwerk te laten verwijderen door
                 anti-malwaresoftware. Als een DDoS-aanval niet sterk genoeg is, dan is een website alleen tijdelijk
@@ -33,13 +33,13 @@
                 beschikbaar is doordat er data is beschadigd, een hackpoging of malware. Het beveiligingslek moet dan zo
                 snel mogelijk worden gedicht.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Serieuzere problemen</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingRepressie_en_correctie2">
+        <div class="kop_samenvattingRepressie_en_correctie2">
             <p>
                 Systemen zullen uitvallen of moeten worden uitgezet als de problemen serieuzer zijn. Zo wordt er
                 bijvoorbeeld voorkomen dat er data wordt gestolen. In dat geval is er vaak ook financiële schade door de
@@ -48,7 +48,7 @@
             <p>
                 Laten we nu gaan kijken of u in phishing trapt. <a href="zijpaginaQuiz.html">Klik hier voor de quiz</a>
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
