--- a/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
+++ b/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
@@ -25,7 +25,7 @@
             <img src="../afbeeldingen/ethisch-hackers.webp" alt=" Afbeelding_Etisch-hackers">
         </div>
 
-        <article class="kop_samenvattingEthischeHackers1">
+        <div class="kop_samenvattingEthischeHackers1">
             <p>
                 Hacken wordt vaak gekoppeld aan criminele activiteiten, maar er zijn ethische hackers die juist
                 bijdragen aan een veiliger internet. Deze ethische hackers spelen een belangrijke rol in het opsporen
@@ -37,13 +37,13 @@
                 hackers volgen de methode: responsible disclosure, waarbij ze eerst het lek melden aan de
                 verantwoordelijke partij en het na een bepaalde periode openbaar maken.
             </p>
-        </article>
+        </div>
 
-        <article class="koptitel">
+        <div class="koptitel">
             <p>Persvrijheid</p>
-        </article>
+        </div>
 
-        <article class="kop_samenvattingEthischeHackers2">
+        <div class="kop_samenvattingEthischeHackers2">
             <p>
                 Ondanks dat ethische hackers de wet overtreden door te hacken, worden ze niet bestraft, omdat hun rol
                 publieke belang heeft: het beveiligen van het internet. Het publiceren van informatie over gevaarlijke
@@ -52,7 +52,7 @@
                 is om een ernstige fout aan te tonen, en het stelen van gegevens of onnodig hacken kan alsnog leiden tot
                 vervolging en straf.
             </p>
-        </article>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
