--- a/digitale_veiligheid/zijpaginaAuthenticatie.html
+++ b/digitale_veiligheid/zijpaginaAuthenticatie.html
@@ -16,8 +16,8 @@
         <header>
 
             <nav class="Home">
-                <p><a href="../index.html">Home
-                    </a></p>
+                <a href="../index.html">Home
+                    </a>
             </nav>
 
             <h1>Authenticatie</h1>
