--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -1,9 +1,11 @@
+<!--Alle code is gevalideerd: https://validator.w3.org/nu/#textarea -->
 <!DOCTYPE html>
 <html lang="nl">
 
 <head>
 
-    <title>Repressie_en_correctie</title>
+    <title>R
+        repressie_en_correctie</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
 
