--- a/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
+++ b/aanvallers_en_verdedigers/zijpaginaEthischeHackers.html
@@ -16,8 +16,8 @@
 
         <header>
             <nav class="Home">
-                <p><a href="../index.html">Home
-                    </a></p>
+                <a href="../index.html">Home
+                    </a>
             </nav>
             <h1>Ethische hackers</h1>
         </header>
