--- a/bedreigingen/zijpaginaZwakhedenArchitectuur.html
+++ b/bedreigingen/zijpaginaZwakhedenArchitectuur.html
@@ -17,8 +17,8 @@
         <header>
 
             <nav class="Home">
-                <p><a href="../index.html">Home
-                    </a></p>
+                <a href="../index.html">Home
+                    </a>
             </nav>
 
             <h1>Zwakheden in de architectuur</h1>
