--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -16,8 +16,8 @@
 
         <header>
             <nav class="Home">
-                <p><a href="../index.html">Home
-                    </a></p>
+                <a href="../index.html">Home
+                    </a>
             </nav>
             <h1>Zwakheden bij de gebruiker</h1>
         </header>
