--- a/digitale_veiligheid/zijpaginaBeschikbaarheid.html
+++ b/digitale_veiligheid/zijpaginaBeschikbaarheid.html
@@ -16,8 +16,8 @@
 
         <header>
             <nav class="Home">
-                <p><a href="../index.html">Home
-                    </a></p>
+                <a href="../index.html">Home
+                    </a>
             </nav>
             <h1>Beschikbaarheid</h1>
         </header>
