--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="wrapper">
  
     <header>
-      <h1>Security, nog origineel maken</h1>
+      <h1>Data Defence</h1>
     </header>
 
     <nav class="inhoudsopgave">
