--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
 
     <nav class="deelkopje_navLaatste">
       <p>
-        <a href="maatregelen/zijpaginaRepressie_en_correctie">Repressie en correctie</a><br>Als er malware wordt
+        <a href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Repressie, correctie en technieken</a><br>Als er malware wordt
         aangetroffen moeten er maatregelen worden genomen, repressie. Er moet ook eventueel schade worden hersteld,
-        correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval...<a
-          href="maatregelen/zijpaginaRepressie_en_correctie">Lees meer</a>
+        correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval. Er zijn veel verschillende soorten aanvallen, zoals...<a
+          href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Lees meer</a>
       </p>
     </nav>
 
