--- a/maatregelen/zijpaginaTest.html
+++ b/maatregelen/zijpaginaTest.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Detectie</title>
+    <title>Test</title>
 
     <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
 
@@ -14,7 +14,13 @@
 
     <div id="wrapper">
 
-    <header><h1>Quiz</h1></header>
+    <header><h1>Test</h1></header>
+
+    <div class="koptitel2">
+<p>
+    Is dit phishing?
+</p>
+    </div>
 
     <div id="bigimage"> 
         <img
