--- a/maatregelen/zijpaginaTest2.html
+++ b/maatregelen/zijpaginaTest2.html
@@ -25,22 +25,16 @@
 
         </header>
 
-        <div class="koptitel2">
+        <div id="bigimage">
+            <img src="../afbeeldingen/Goed.webp" alt=" Quiz">
+        </div>
+
+        <div class="kop_samenvattingRepressie_correctie_technieken3">
             <p>
-                Is dit phishing?
+                Dit was inderdaad phishing. Een bank zal bij belangrijke dingen altijd communiceren met een brief en
+                niet met een mail. Let bij een brief ook altijd op. Vertrouwt u het niet, bel dan uw bank op.
             </p>
         </div>
-
-        <div id="bigimage">
-            <img src="../afbeeldingen/Phishing1.jpg" alt=" Quiz">
-        </div>
-
-        <nav class="ja_nee">
-
-            <a href="zijpaginaTest2.html">Ja</a>
-            <a href="zijpaginaTesthelaas.html">Nee</a>
-
-        </nav>
 
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
