--- a/maatregelen/zijpaginaTesthelaas.html
+++ b/maatregelen/zijpaginaTesthelaas.html
@@ -1,1 +1,46 @@
 <!--Alle code is gevalideerd: https://validator.w3.org/nu/#textarea -->
+<!DOCTYPE html>
+<html lang="nl">
+
+<head>
+
+    <title>Test</title>
+
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
+
+</head>
+
+<body>
+
+    <div id="wrapper">
+
+        <header>
+
+            <nav class="Home">
+                <a href="../index.html">Home
+                </a>
+            </nav>
+
+            <h1>Test</h1>
+
+        </header>
+
+        <div id="bigimage">
+            <img src="../afbeeldingen/Helaas.jpg" alt=" Quiz">
+        </div>
+
+        <div class="kop_samenvattingRepressie_correctie_technieken3">
+            <p>
+                Dit was wel phishing. Een bank zal bij belangrijke dingen altijd communiceren met een brief en niet met
+                een mail. Let bij een brief ook altijd op. Vertrouwt u het niet, bel dan uw bank op.
+            </p>
+        </div>
+
+
+        <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
+
+    </div>
+
+</body>
+
+</html>
