--- a/maatregelen/zijpaginaTest.html
+++ b/maatregelen/zijpaginaTest.html
@@ -35,13 +35,14 @@
             <img src="../afbeeldingen/Phishing1.jpg" alt=" Quiz">
         </div>
 
-        <nav class="ja_nee">
+        <div class="binnen-wrapper">
+            <nav class="ja_nee">
 
-            <a href="zijpaginaTest2.html">Ja</a>
-            <a href="zijpaginaTesthelaas.html">Nee</a>
-
-        </nav>
-
+                <a href="zijpaginaTest2.html">Ja</a>
+                <a href="zijpaginaTesthelaas.html">Nee</a>
+    
+            </nav>
+        </div>
 
         <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
 
