--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <div id="wrapper">
- 
+
     <header>
       <h1>Data Defence</h1>
     </header>
@@ -115,7 +115,7 @@
       </ul>
       <p>Met verschilende methoden zoals encryptie, HTTPS en sterke wachtwoorden kan de gebruiker de aanvallen
         verdedigen.</p>
-      </div>
+    </div>
 
     <div class="plaatjes_klein"><img src="afbeeldingen/Architectuur.jpg" alt=" Afbeelding Architectuur"></div>
 
@@ -247,10 +247,11 @@
 
     <nav class="deelkopje_navLaatste">
       <p>
-        <a href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Repressie, correctie en technieken</a><br>Als er malware wordt
+        <a href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Repressie, correctie en technieken</a><br>Als
+        er malware wordt
         aangetroffen moeten er maatregelen worden genomen, repressie. Er moet ook eventueel schade worden hersteld,
-        correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval. Er zijn veel verschillende soorten aanvallen, zoals...<a
-          href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Lees meer</a>
+        correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval. Er zijn veel verschillende soorten
+        aanvallen, zoals...<a href="maatregelen/zijpaginaRepressie_correctie_technieken.html">Lees meer</a>
       </p>
     </nav>
 
